--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,5 +1,6 @@
 server {
     listen 80;
+    server_tokens off;
     location /api/docs/ {
         root /usr/share/nginx/html;
         try_files $uri $uri/redoc.html;
@@ -18,3 +19,4 @@ server {
         root   /var/html/frontend/;
       }
 }
+
