--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -4,6 +4,9 @@ server {
         root /usr/share/nginx/html;
         try_files $uri $uri/redoc.html;
     }
+    location /api/ {
+      proxy_pass http://web:8000;
+    }
     location / {
         root /usr/share/nginx/html;
         index  index.html index.htm;
@@ -18,4 +21,3 @@ server {
         root   /var/html/frontend/;
       }
 }
-
