--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -3,4 +3,7 @@ WORKDIR /app
 COPY requirements.txt .
 RUN pip3 install -r requirements.txt --no-cache-dir
 COPY . .
-CMD ["bash", "run.sh"]
+RUN python manage.py collectstatic --no-input
+#RUN gunicorn foodgram.wsgi:application --bind 0:8000
+CMD ["gunicorn", "foodgram.wsgi:application", "--bind", "0:8000"]
+#CMD ["python", "manage.py", "migrate", "--no-input"]
