--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -23,10 +23,12 @@ MarkupSafe==2.1.1
 mccabe==0.7.0
 oauthlib==3.2.0
 Pillow==9.2.0
+psycopg2-binary==2.8.6
 pycodestyle==2.9.1
 pycparser==2.21
 pyflakes==2.5.0
 PyJWT==2.4.0
+python-dotenv==0.21.0
 python3-openid==3.2.0
 pytz==2022.2.1
 requests==2.28.1
