--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -12,6 +12,7 @@ services:
     volumes:
       - static_value:/app/static/
       - media_value:/app/media/
+ 
     depends_on:
       - db
     env_file:
@@ -22,16 +23,20 @@ services:
       dockerfile: Dockerfile
     volumes:
       - ../frontend/:/app/result_build/
+    depends_on:
+      - web
   nginx:
     image: nginx:1.19.3
     ports:
       - "80:80"
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
+      - static_value:/var/html/static/
+      - media_value:/var/html/media/
       - ../frontend/build:/usr/share/nginx/html/
       - ../docs/:/usr/share/nginx/html/api/docs/
     depends_on:
-      - web
+      - frontend
 volumes:
   static_value:
   media_value:
