--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,11 +1,21 @@
 server {
     listen 80;
+    
     location /api/docs/ {
         root /usr/share/nginx/html;
         try_files $uri $uri/redoc.html;
     }
+    location /admin/ {
+      proxy_pass http://web:8000;
+    }
     location /api/ {
       proxy_pass http://web:8000;
+    }
+    location /static/admin/ {
+        root /var/html;
+    }
+    location /media/ {
+        root /var/html;
     }
     location / {
         root /usr/share/nginx/html;
@@ -16,8 +26,8 @@ server {
         proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header        X-Forwarded-Proto $scheme;
       }
-      error_page   500 502 503 504  /50x.html;
-      location = /50x.html {
-        root   /var/html/frontend/;
-      }
+    error_page   500 502 503 504  /50x.html;
+    location = /50x.html {
+      root   /var/html/frontend/;
+    }
 }
