--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -9,12 +9,20 @@ server {
       proxy_pass http://web:8000;
     }
     location /api/ {
-      proxy_pass http://web:8000;
+      proxy_set_header        Host $host;
+      proxy_set_header        X-Real-IP $remote_addr;
+      proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header        X-Forwarded-Proto $scheme;
+      proxy_pass http://web:8000/api/;
+      
     }
     location /static/admin/ {
         root /var/html;
     }
     location /media/ {
+        root /var/html;
+    }
+    location /static/rest_framework/ {
         root /var/html;
     }
     location / {
