--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -3,8 +3,5 @@ WORKDIR /app
 COPY requirements.txt .
 RUN pip3 install -r requirements.txt --no-cache-dir
 COPY . .
-RUN echo python manage.py collectstatic --no-input
-#RUN gunicorn foodgram.wsgi:application --bind 0:8000
+RUN python manage.py collectstatic --no-input
 ENTRYPOINT ["gunicorn", "foodgram.wsgi:application", "--bind", "0:8000"]
-#CMD ["python", "manage.py", "migrate", "--no-input"]
-RUN echo python manage.py migrate --no-input
