--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     volumes:
       - /var/lib/postgresql/data/
     env_file:
-      - ../backend/.env
+      - ../backend/foodgram/.env
   web:
     build: ../backend
     restart: always
@@ -16,7 +16,7 @@ services:
     depends_on:
       - db
     env_file:
-      - ../backend/.env
+      - ../backend/foodgram/.env
   frontend:
     build:
       context: ../frontend
